# Assignment03

./: .gitignore  README.md  pyproject.toml
assignments/assignment01/: assignment01.ipynb
assignments/assignment02/: assignment02.ipynb  assignment_utils.py  gr01_assignment_02.html  gr01_assignment_02.ipynb
labs/extra/: lab-extra-tsne.ipynb
labs/lab00/: lab00.ipynb
labs/lab00-environment-setup/: lab00-environment-setup.ipynb
labs/lab01-numpy-fundamentals/: lab01-numpy-fundamentals.ipynb
labs/lab02-pandas-fundamentals/: lab02-pandas-fundamentals.ipynb
labs/lab04-bad-data-beats-good-models/: lab04-bad-data-beats-good-models.ipynb  lab04_utils.py
labs/lab05-feature-spaces-and-separability/: lab05-feature-spaces-and-separability.ipynb
labs/lab06-error-surfaces-and-gradient-descent/: lab06-error-surfaces-and-gradient-descent.ipynb
labs/lab08-penguins-eda-modeling/: lab08-penguins-eda-modeling.ipynb
labs/lab09-support-vector-machines/: lab09-support-vector-machines.ipynb
labs/lab10-multilayer-perceptrons/: lab10-multilayer-perceptrons.ipynb
labs/lab11-clustering-algorithms/: lab11-clustering-algorithms.ipynb
scripts/: setupPythonEnvironment.sh
