[project]
name = "ing3513"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13,<3.14"
authors = [{ name = "Øystein Nordberg", email = "oystein@midlaier.no" }]

dependencies = [
    "ipykernel~=7.1.0",
    "ipywidgets~=8.1.8",
    "nbformat~=5.10.4",
    "numpy~=2.4.1",
    "matplotlib~=3.10.8",
    "nbconvert~=7.17.0",
    "pandas~=2.3.0",
    "plotly~=6.5.1",
    "seaborn~=0.13.2",
    "scikit-learn~=1.8.0"
]

[dependency-groups]
dev = [
  "ruff~=0.14.11",
]
